@@ -5,7 +5,7 @@ verify_ssl = true
 [packages]
 amqp = ">=2.1.4"
 celery = ">=4,<5"
-djangorestframework = ">=3.5,<3.6"
+djangorestframework = "*"
 django-jsonify = "*"
 django-filter = "*"
 django-auth-ldap = "*"
@@ -22,6 +22,9 @@ redis = "*"
 requests = "*"
 twilio = "*"
 whitenoise = "*"
+coreapi = "*"
 Django = ">=1.10,<1.11"
 django_polymorphic = "*"
 django_compressor = "*"
+Markdown = "*"
+Pygments = "*"
