@@ -12,7 +12,7 @@ logger = logging.getLogger(__name__)
 router = routers.DefaultRouter()
 
 
-def create_viewset(arg_model, arg_fields, arg_read_only_fields=(), no_create=False):
+def create_viewset(arg_model, arg_fields, arg_read_only_fields=(), readonly=False):
     arg_read_only_fields = ('id',) + arg_read_only_fields
     for field in arg_read_only_fields:
         if field not in arg_fields:
@@ -25,14 +25,8 @@ def create_viewset(arg_model, arg_fields, arg_read_only_fields=(), no_create=Fal
             read_only_fields = arg_read_only_fields
 
     viewset_class = None
-    if no_create:
-        class NoCreateViewSet(mixins.RetrieveModelMixin,
-                              mixins.UpdateModelMixin,
-                              mixins.DestroyModelMixin,
-                              mixins.ListModelMixin,
-                              viewsets.GenericViewSet):
-            pass
-        viewset_class = NoCreateViewSet
+    if readonly:
+        viewset_class = viewsets.ReadOnlyModelViewSet
     else:
         viewset_class = viewsets.ModelViewSet
 
@@ -82,7 +76,7 @@ status_check_fields = (
 router.register(r'status_checks', create_viewset(
     arg_model=models.StatusCheck,
     arg_fields=status_check_fields,
-    no_create=True,
+    readonly=True,
 ))
 
 router.register(r'icmp_checks', create_viewset(
@@ -161,5 +155,6 @@ router.register(r'alertplugins', create_viewset(
     arg_model=alert.AlertPlugin,
     arg_fields=(
             'title',
-        )
+        ),
+    readonly=True
     ))
