@@ -3,6 +3,8 @@ anyjson==0.3.3
 appdirs==1.4.3
 billiard==3.5.0.2
 celery==4.0.2
+coreapi==2.3.0
+coreschema==0.0.4
 dj-database-url==0.4.2
 Django==1.10.6
 django-appconf==1.0.2
@@ -11,16 +13,21 @@ django-compressor==2.1.1
 django-filter==1.0.1
 django-jsonify==0.3.0
 django-polymorphic==1.1
-djangorestframework==3.5.4
+djangorestframework==3.6.2
 freezegun==0.3.8
 gevent==1.2.1
 greenlet==0.4.12
-gunicorn==19.7.0
+gunicorn==19.7.1
 httplib2==0.10.3
 icalendar==3.11.3
+itypes==1.1.0
+Jinja2==2.9.5
 kombu==4.0.2
+Markdown==2.6.8
+MarkupSafe==1.0
 packaging==16.8
 psycopg2==2.7.1
+Pygments==2.2.0
 pyldap==2.4.28
 pyparsing==2.2.0
 PySocks==1.6.6
@@ -32,5 +39,6 @@ requests==2.13.0
 rjsmin==1.0.12
 six==1.10.0
 twilio==5.7.0
+uritemplate==3.0.0
 vine==1.1.3
 whitenoise==3.3.0
